syntax = "proto3";

package com.example.protos;

// The lambda callers service definition.
service Checker {
  // Check if interval exists
  rpc CheckExists (TimeRequest) returns (TimeReply) {}

  // Fetch messages
  rpc GetMessages (TimeRequest) returns (Messages) {}
}

// The request message containing the time and time interval respectively
message TimeRequest {
  string T = 1;
  string dT = 2;
}

// The response message containing the boolean indicating if log messages interval exists
message TimeReply {
  bool message = 1;
}

// The response message containing the actual MD5 hashes of the messages
message Messages {
  string messages = 1;
}